fix(abrechnung): Teilnehmerbeiträge aus Gesamteinzahlungen synchronisieren
Die automatische Synchronisation der Teilnehmerbeiträge verwendet
jetzt die Summe aller Zahlungsnachweise statt nur nach Zahlungsweg
getrennter Teilbeträge.

Damit werden eingegangene Überzahlungen vollständig als
TEILNEHMERBEITRAG erfasst, während Rückzahlungen weiterhin als
separate negative manuelle Buchungen abgezogen werden.

ZahlungsPositionen bleiben ausschließlich für die Zuordnung von
Zahlungen zu Teilnehmern relevant.